Freedom Sanbox Ant Deploy/src/objects/Workflows_Tracker_Master__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workflows Tracker Masters</relationshipLabel>
        <relationshipName>Workflows_Tracker_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skip_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tracker_Type__c</fullName>
        <label>Tracker Type</label>
        <picklist>
            <picklistValues>
                <fullName>EntityWFlowTracker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workflow_Tracker_Detail_Status__c</fullName>
        <label>Workflow Tracker Detail Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Workflows Tracker Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Tracker_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workflows Tracker Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows Tracker Masters</pluralLabel>
    <recordTypes>
        <fullName>EntityWflowDetail</fullName>
        <active>true</active>
        <label>EntityWflowDetail</label>
    </recordTypes>
    <recordTypes>
        <fullName>WFlowTemplate</fullName>
        <active>true</active>
        <label>WFlowTemplate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>